--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="css/loading.css"><!-- LOADING -->
 		<link rel="stylesheet" type="text/css" href="css/style.css"><!-- CSS PRINCIPAL -->
 		<link rel="stylesheet" type="text/css" href="css/video.css"><!-- CSS DO VIDEO -->
+		<link rel="stylesheet" type="text/css" href="css/mouse_animation.css"><!-- CSS DO LOOP ANIMATION MOUSE -->
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 
 		<link rel="stylesheet" type="text/css" href="style/social_navbar.css"><!-- REDES SOCIAIS DA BARRA DE MENU -->
@@ -26,14 +27,14 @@
 
 	</head>
 	<body>
-		<!--BOTAO MENU-->
-		<input type="checkbox" id="bt_menu">
-		<label for="bt_menu">&#9776;</label>
-
 		<!-- LOADING -->
 		<div id="content_loading">
 			<div id="loading"></div>
 		</div>
+
+		<!--BOTAO MENU-->
+		<input type="checkbox" id="bt_menu">
+		<label for="bt_menu">&#9776;</label>
 
 		<!-- BARRA DE NAVEGAÇÃO -->
 		<nav>
@@ -75,6 +76,10 @@
 				</video>
 			</div>
 		</header>
+
+		<div class="mouse">
+			<div class="down"></div>
+		</div>
 
 		<section id="empresa" class="wavy1">
 			<h2 id="scrollmove">EMPRESA</h2>
