--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 
 		<section id="servicos">
 			<div class="containerserv">
+				<div class="barra-header-serv"></div>
 				<h2>SERVIÇOS</h2>
+				<div class="barra-header-serv2"></div>
 					<!-- BOTÕES -->
 					<ul >
 						<a class="clicartela" href="javascript: abrir1();">
