--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
 		</div>
 
 		<section id="empresa" class="wavy1">
-			<h2 id="scrollmove">EMPRESA</h2>
-			<p>A IDEIAS CRIATIVAS COMUNICAÇÃO E MARKETING FOI IDEALIZADA E PLANEJADA EM 2017, INICIANDO SEUS TRABALHOS EM 2018. SOMOS UMA EQUIPE MULTIPROFISSIONAL QUE VISA RECONHECIMENTO E DESTAQUE NO SEGMENTO DE COMUNICAÇÃO E MARKETING. NOSSA MISSÃO É GERAR RESULTADOS CONFIAVÉIS, AGREGAR VALOR À SUA MARCA E ATRAIR POTENCIAIS CLIENTES PARA SEU EMPREENDIMENTO ATRAVÉS DAS MELHORES ESTRATÉGIAS, A FIM DE POTENCIALIZAR SEUS RESULTADOS. VALORIZAMOS A CRIATIVIDADE, O COMPROMISSO, O TRABALHO EM EQUIPE E A QUALIDADE DE NOSSOS SERVIÇOS PARA ATINGIRMOS UMA ALTA PERFORMANCE.</p>
+			<div class="barra-header-emp"></div>
+			<h2>EMPRESA</h2>
+			<p>A IDEIAS CRIATIVAS COMUNICAÇÃO E MARKETING FOI IDEALIZADA E PLANEJADA EM 2017, INICIANDO SEUS TRABALHOS EM 2018. SOMOS UMA EQUIPE MULTIPROFISSIONAL QUE VISA <span>RECONHECIMENTO</span> E <span>DESTAQUE</span> NO SEGMENTO DE COMUNICAÇÃO E MARKETING. NOSSA MISSÃO É GERAR <span>RESULTADOS CONFIAVÉIS</span>, AGREGAR VALOR À SUA MARCA E ATRAIR POTENCIAIS CLIENTES PARA SEU EMPREENDIMENTO ATRAVÉS DAS MELHORES ESTRATÉGIAS, A FIM DE POTENCIALIZAR SEUS RESULTADOS. VALORIZAMOS A CRIATIVIDADE, O COMPROMISSO, O TRABALHO EM EQUIPE E A QUALIDADE DE NOSSOS SERVIÇOS PARA ATINGIRMOS UMA ALTA PERFORMANCE.</p>
 			<a href="#contact" class="buton" data-anime="left">Entre em contato</a><br>
 			<a href="sejaCliente.html" class="buton" data-anime="right">Seja nosso Cliente</a>
 		</section>
