--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
 			<div id="box3">
 				<h2>Vamos Conversar?</h2>
 				<form method="post" action="conection/enviar.php" name="contactform">
-					<input class="form-input" type="text" name="nome" placeholder="Nome Completo" required="">
-					<input class="form-input" type="text" name="assunto" placeholder="Assunto" required="">
-					<input class="form-input" type="text" class="boxemail" name="email" placeholder="Seu e-mail" required="">
-					<textarea class="form-input" name="mensagem"  placeholder="Mensagem" required=""></textarea>
+				  <input class="form-input" type="text" name="nome" placeholder="Nome Completo" required>
+				  <input class="form-input" type="text" name="assunto" placeholder="Assunto" required>
+				  <input class="boxemail" type="text" name="email" placeholder="Seu e-mail"    required>
+				  <textarea class="form-input" name="mensagem"  placeholder="Mensagem" required></textarea>
 					
 					<!-- Botão Enviar -->
 					<button class="form-input" type="submit" value="Enviar">Enviar Mensagem!</button>
